--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "jsonwebtoken": "9.0.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "sequelize": "5.21.3",
     "sequelize-typescript": "^1.1.0",
     "sequelize-typescript-auto-migrations": "git+https://github.com/Peersyst/sequelize-typescript-auto-migrations.git#peersyst",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "typescript": "^4.6.4",
     "umzug": "^2.3.0"
   },
