--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "5.21.3",
-    "sequelize-typescript": "^1.1.0",
-    "sequelize-typescript-auto-migrations": "git+https://github.com/Peersyst/sequelize-typescript-auto-migrations.git#peersyst",
+    "sequelize": "^6.31.1",
+    "sequelize-typescript": "^2.1.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "typescript": "^4.6.4",
@@ -44,8 +43,7 @@
     "@types/express": "^4.17.0",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.5",
-    "@types/node": "^13.1.7",
-    "@types/nodemailer": "^6.4.0",
+    "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^7.14.0",
