--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "env-dev": "env-cmd npm run dev",
     "prod": "node -r dotenv/config ./build/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\"",
+    "test": "jest",
     "lint": "eslint . --ext .ts,.json --max-warnings 0",
     "lint-and-fix": "eslint . --ext .ts,.json --fix",
     "db:generate-migration": "sequelize-ts create --models-path=./src/infrastructure/persistence/sequelize.ts --name",
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.5.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -28,14 +29,17 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "jest": "^29.5.0",
     "jsonwebtoken": "9.0.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.6.4",
     "umzug": "^2.3.0"
   },
