--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.1",
     "sequelize-typescript": "^2.1.5",
     "supertest": "^6.3.3",
