--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   mysql:
-    image: mysql:5.7
-    platform: linux/amd64
+    image: mysql:latest
     container_name: container
     tty: true
     ports:
